Bug 976722 - Make -moz-appearance:toolbox influence the sheet attachment edge. r=roc